--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,1 +1,38 @@
 @import "tailwindcss";
+
+
+@theme {
+    --color-primary: #2563EB;
+    --color-secondary: #6B7280;
+    --color-background: #fff;
+    --color-text: #000;
+    --color-input: #f3f3f3;
+    --color-error: #EF4444;
+    --color-success: #DC2626;
+}
+
+@layer components {
+    .test-border {
+        @apply border border-red-700;
+    }
+
+    .header {
+        @apply font-bold text-lg;
+    }
+
+    .def-input {
+        @apply w-full outline-primary bg-input rounded-md p-2 text-text border-secondary border;
+    }
+
+    .def-btn {
+        @apply p-2 rounded-md bg-primary text-white font-bold capitalize cursor-pointer hover:scale-105 active:scale-95 transition-transform duration-100;
+    }
+
+    .def-pad {
+        @apply px-3 py-4;
+    }
+
+    body {
+        @apply bg-background text-text;
+    }
+}
